...
                        <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hrl-Ri-bBA">
                                <rect key="frame" x="20" y="111" width="560" height="266"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Откуда" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3N8-0f-eEv">
                                        <rect key="frame" x="20" y="0.0" width="520" height="88"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Куда" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKZ-X0-Yvr">
...
                            <constraint firstAttribute="trailing" secondItem="pFf-Jd-ONQ" secondAttribute="trailing" id="LgZ-7a-Rif"/>
                            <constraint firstItem="pFf-Jd-ONQ" firstAttribute="top" secondItem="XWT-T3-szN" secondAttribute="bottom" id="l8o-go-quP"/>
                            <constraint firstItem="oiU-nn-vig" firstAttribute="top" secondItem="pFf-Jd-ONQ" secondAttribute="bottom" id="nbf-g6-KQF"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Откуда" id="2ak-si-lTE">
                        <barButtonItem key="leftBarButtonItem" title="Отмена" id="Qe1-eO-g0p">
                            <connections>
                                <segue destination="WzK-2B-7nR" kind="unwind" unwindAction="unwindToJourneyVC:" id="ybb-4C-Are"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="bIJ-Om-3O9">
                            <connections>
...
                                        <rect key="frame" x="256" y="8" width="88" height="44"/>
                                        <color key="backgroundColor" red="0.29530201340000001" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="KaU-tL-uSa"/>
                                            <constraint firstAttribute="width" constant="88" id="fnE-gp-ISd"/>
                                        </constraints>
                                        <state key="normal" title="Ок">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="cancel" destination="0D4-4v-qRu" eventType="touchUpInside" id="bey-a7-P9r"/>
                                            <action selector="cancel" destination="oPC-Gl-W8D" eventType="touchUpInside" id="zDD-ti-eRg"/>
                                        </connections>
...
                    <connections>
                        <outlet property="infoLabel" destination="nNi-jc-B1w" id="fRj-gV-AuR"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4rj-qN-QIB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="3164" y="19"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="Kiy-82-YRl">
            <objects>
                <tabBarController id="lCB-xK-YBu" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="Hxb-DC-uNy">
...
